org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/IndividualUsage_Invalid.sysml.xt
//*
XPECT_SETUP org.omg.sysml.xpect.tests.validation.invalid.SysMLTests
	ResourceSet {
		ThisFile {}
				File {from ="/library.kernel/Base.kerml"}
		       	File {from ="/library.kernel/Occurrences.kerml"}
				File {from ="/library.kernel/Objects.kerml"}
				File {from ="/library.kernel/Performances.kerml"}
				File {from ="/library.systems/Items.sysml"}
				File {from ="/library.systems/Parts.sysml"}
				File {from ="/library.systems/Ports.sysml"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library.kernel/Base.kerml"}
		       	File {from ="/library.kernel/Occurrences.kerml"}
				File {from ="/library.kernel/Objects.kerml"}
				File {from ="/library.kernel/Performances.kerml"}
				File {from ="/library.systems/Items.sysml"}
				File {from ="/library.systems/Parts.sysml"}
				File {from ="/library.systems/Ports.sysml"}
			}
		}
	}
END_SETUP 
*/
package 'Individuals and Roles' {
	
	part def A;
	part def B;
	part def BB :> B;
	part def C;
	
	individual def AA :> BB;
	individual def CC :> A;
	individual def DD;

	individual def A_1 :> A {
		part b_1 : B;
		part c_1 : C;
	}
	individual def B_1 :> B;
	// XPECT errors --> "An individual must be typed by one individual definition." at "individual two_types : A_1, B_1;"
	individual two_types : A_1, B_1;

	individual a_1 : A_1 {
		snapshot a_1_1 {
			snapshot b_1_1 : AA :>> b_1;
		}
		
		snapshot a_1_2 {
			// XPECT errors --> "An individual must be typed by one individual definition." at "snapshot c_1_1 : CC :>> c_1;"
			snapshot c_1_1 : CC :>> c_1;
			//cc is part-def-typed by A, but c_1 is part-def=typed by C
		}
		snapshot a_1_3 {
			// XPECT errors --> "An individual must be typed by one individual definition." at "snapshot c_1_1 : DD :>> c_1;"
			snapshot c_1_1 : DD :>> c_1;
			//DD has no part-def-type, but c_1 is part-def-typed by C
		}		
		snapshot a_1_4 {
			// XPECT errors -->"An individual must be typed by one individual definition." at "snapshot b_1_1 : B :>> b_1;"
			snapshot b_1_1 : B :>> b_1;
		}
	}
}